# terec

./: .gitignore  LICENSE.md  README.md  TESTING.md  USER_GUIDE.md  build.sh  fly.toml  pyproject.toml  run.sh  test.sh  workspace.toml
.docker/: buildkit  setup-buildkit.sh
.github/workflows/: test.yml
bases/terec/api/: __init__.py  auth.py  core.py  main.py  projects_api.py  structure_api.py
bases/terec/api/routers/: failures.py  plots.py  projects.py  results.py  util.py
bases/terec/api/tests/: conftest.py  test_projects_api.py
bases/terec/cli/: admin_cli.py  admin_commands.py  builds_commands.py  jenkins_commands.py  junit_commands.py  main.py  tests_commands.py
bases/terec/converters/junit/: converter.py
bases/terec/import_cli/: junit_commands.py  main.py
bases/terec/jenkins_cli/: __init__.py  main.py  pipeline_commands.py
bases/terec/lib/: terec_admin_client.py  terec_api_client.py
bases/terec/status_cli/: __init__.py  builds_commands.py  main.py  params.py  tests_commands.py  util.py
bases/terec/util/: cli_params.py  cli_util.py
components/terec/auth/: __init__.py  tokens.py
components/terec/ci_jenkins/: build_info_parser.py  jenkins_server.py  report_parser.py
components/terec/database/: __init__.py  core.py
components/terec/model/: __init__.py  failures.py  hash_id.py  model_to_dict.py  projects.py  results.py  structure.py  util.py
components/terec/model/junit/: converter.py  demo_converter.py
components/terec/regression/: failure_analysis.py  similarity_checker.py
deploy/astradb/: docker-compose.yaml
deploy/local/: docker-compose.yaml
development/: connect-astradb.py  import-cassandra-3.11.sh  import-cassandra-5.0-build.sh  import-cassandra-5.0-run.sh  import-cassandra-5.0-tests.sh  import-cassandra-5.0.sh  jenkins-playground.py  similarity-text.py  start-cassandra-docker.sh
doc/: EXAMPLE.md  terec-diary.md
projects/terec_api/: Dockerfile  pyproject.toml
projects/terec_cli/: Dockerfile  entrypoint.sh  pyproject.toml
test/: TESTING.md  assertions.py  conftest.py  docker-compose.yaml  generator.py  jenkins-config.xml  jenkins-entrypoint.sh  random_data.py  terec_api_client.py
test/bases/terec/api/: random_data.py  test_benchmark_results_api.py  test_core.py  test_failures_api.py  test_plots_api.py  test_projects_api.py  test_results_api.py  test_structure_api.py
test/bases/terec/cli/: test_core.py  test_jenkins_commands.py
test/bases/terec/converters/junit/: test_converter.py
test/bases/terec/jenkins_cli/: test_pipeline_commands.py
test/components/terec/auth/: test_core.py  test_tokens.py
test/components/terec/ci_jenkins/: test_build_info_parser.py  test_jenkins_import.py  test_jenkins_server.py  test_report_parser.py
test/components/terec/ci_jenkins/sample_data/: build_info.py  build_test_report.py
test/components/terec/database/: test_core.py
test/components/terec/model/: generator.py  test_failures.py  test_hash_id.py  test_model_to_dict.py  test_projects.py  test_structure.py  test_suites.py  test_test_suite.py  test_util.py
test/components/terec/model/junit/: test_converter.py
test/components/terec/regression/: test_failure_analysis.py  test_similarity_checker.py  text_samples.py
test/examples/junit/: junit-basic.xml  junit-complete.xml  pytest-report.xml
test/it/: test_junit_import.py
