[tool.poetry]
name = "terec-io"
version = "0.1.0"
description = "TEst REsult Collector"
authors = ["Tomek Lasica <tlasica@life.pl>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "terec/database", from = "components"},
    {include = "terec/model", from = "components"},
    {include = "terec/api", from = "bases"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"
pika = "^1.3.2"
faker = "^19.10.0"
cassandra-driver = "^3.28.0"
tenacity = "^8.2.3"
flake8 = "^6.1.0"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
isort = "^5.12.0"
pytest = "^7.4.2"
black = "^23.9.1"
ipykernel = "^6.25.2"
pytest-docker-fixtures = "^1.3.17"
pytest-docker = "^2.0.1"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
