[tool.poetry]
name = "terec"
version = "0.1.0"
description = "TEst REsult Collector"
authors = ["Tomek Lasica <tlasica@life.pl>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "terec/api", from = "bases"},
    {include = "terec/database", from = "components"},
    {include = "terec/model", from = "components"},
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
pika = "^1.3.2"
faker = "^19.10.0"
cassandra-driver = "^3.28.0"
tenacity = "^8.2.3"
flake8 = "^6.1.0"
httpx = "^0.25.0"
python-jenkins = "^1.8.1"
codetiming = "^1.4.0"
typer = {extras = ["all"], version = "^0.9.0"}
click = "^8.1.7"
pytest-mock = "^3.12.0"
pytest-benchmark = "^4.0.0"
more-itertools = "^10.1.0"
validators = "^0.22.0"
rich = "^13.7.0"
plotille = "^5.0.0"
termcharts = "^1.1.2"
plotext = "^5.2.8"
aiohttp = {extras = ["speedups"], version = "^3.9.1"}
loguru = "^0.7.2"
scikit-learn = "^1.3.2"
python-levenshtein = "^0.23.0"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.0.1"
isort = "^5.12.0"
pytest = "^7.4.2"
black = "^23.9.1"
ipykernel = "^6.25.2"
pytest-docker = "^2.0.1"
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
test = "poetry run pytest --keepalive --benchmark-skip"
benchmark = "poetry run pytest --keepalive test/bases/terec/api/test_benchmark_results_api.py"

[tool.poe.tasks.build]
shell = """
poetry build-project
pushd projects/terec_api
poetry build-project
docker build . -t terec/api:latest
popd
"""
interpreter = "bash"

[tool.poe.tasks.start-docker]
shell = "docker compose --project-directory deploy/local/ up"

[tool.poe.tasks.start-api]
shell = """
export CASSANDRA_HOSTS=localhost
export CASSANDRA_KEYSPACE=terec
poetry run uvicorn --host 0.0.0.0 --port 8001 --log-config ./projects/terec_api/log_conf.yaml terec.api.main:app
"""
