[tool.poetry]
name = "terec_api"
version = "0.1.0"
description = "Exposes TEREC REST API"
authors = ['Tomek Lasica <tlasica@life.pl>']
license = "MIT"

packages = [
    {include = "terec/database", from = "../../components"},
    {include = "terec/model", from = "../../components"},
    {include = "terec/regression", from = "../../components"},
    {include = "terec/api", from = "../../bases"},
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115"
uvicorn = {extras = ["standard"], version = "^0.34"}
cassandra-driver = "^3.29.0"
more-itertools = "^10.1.0"
codetiming = "^1.4.0"
loguru = "^0.7.2"
python-levenshtein = "^0.27.1"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
